# BREIT_TANI_PROJECT

./: .gitignore  EDA_1.qmd  README.md  main.py  pyproject.toml
Data/processed/: README.md
Data/raw/: README.md
models/: README.md
notebooks/: EDA_1_2.ipynb  EDA_1_3.ipynb  EDA_DATASET_FINAL_1.ipynb  EDA_PREPROCESSING.ipynb  PercentilesTabla.ipynb
reports/: EDA_1.qmd  TANI_DEVELOPMENT_P1.qmd
reports/figures/: README.md
reports/tables/: README.md
src/: README.md  __init__.py
src/data/: README.md  analisis_p1.py  analisis_p2.py
src/models/: README.md
src/utils/: README.md
src/visualization/: README.md
