[project]
name = "tani-project-breit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pip>=25.2",
    "plotly>=6.3.0",
    "rarfile>=4.2",
    "seaborn>=0.13.2",
    "pyyaml>=6.0.2",
    "nbclient>=0.10.2",
    "scipy>=1.16.1",
]
